// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CityNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="text_city"
      >
        Miasto
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="Miasto"
          name="text_city"
          placeholder="Miasto"
          value="$%Wars_aw"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<CityNameField /> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="testId"
  label="Miasto"
  name="text_city"
  placeholder="Miasto"
  value=""
/>
`;

exports[`<CityNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="text_city"
      >
        CityName*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="CityName"
          name="text_city"
          placeholder="Miasto*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<CityNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="text_city"
      >
        City
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="testId"
          label="City"
          name="text_city"
          placeholder="Miasto"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
